--- a/html treino.html
+++ b/html treino.html
@@ -12,6 +12,17 @@
 
 <body>
 
-    Minha primeira Página
+    <h1>Mapa do site</h1>
+    <ul>
+        <li>Home</li>
+        <li>Quem Somos</li>
+        <li>Contato</li>
+
+    </ul>
+    <h1>Perguntas</h1>
+    <ol>
+        <li>comida favorita</li>
+        <li>carro favorito</li>
+    </ol>
 
 </body>
